development/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/plugins: request-id
    kubernetes.io/ingress.class: kong
  creationTimestamp: null
  name: dev-api.kutai.co
  namespace: development
spec:
  rules:
  - host: dev-api.kutai.co
    http:
      paths:
      - backend:
          service:
            name: svc-api-users
            port:
              number: 5002
        path: /api/v1/user
        pathType: ImplementationSpecific
      - backend:
          service:
            name: svc-images-service
            port:
              number: 5005
        path: /api/v1/image
        pathType: ImplementationSpecific
      - backend:
          service:
            name: svc-api-images
            port:
              number: 9999
        path: /api/v1/detection
        pathType: ImplementationSpecific
      - backend:
          service:
            name: svc-api-score
            port:
              number: 3000
        path: /api/v1/score
        pathType: ImplementationSpecific
      - backend:
          service:
            name: svc-api-recommendations
            port:
              number: 4000
        path: /api/v1/recommendations
        pathType: ImplementationSpecific
      - backend:
          service:
            name: svc-api-habits
            port:
              number: 5006
        path: /api/v1/habits
        pathType: ImplementationSpecific
      - backend:
          service:
            name: svc-api-questions
            port:
              number: 5007
        path: /api/v1/questions
        pathType: ImplementationSpecific
      - backend:
          service:
            name: svc-api-admin
            port:
              number: 5009
        path: /api/v1/admin
        pathType: ImplementationSpecific
      - backend:
          service:
            name: svc-api-reports
            port:
              number: 5010
        path: /api/v1/reports
        pathType: ImplementationSpecific
      - backend:
          service:
            name: svc-api-auth
            port:
              number: 5008
        path: /api/v1/auth
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
